fixed table text-alignment for comparison table in /conx-wal-exec refs #27304

--- a/public_html/resources/css/core.css
+++ b/public_html/resources/css/core.css
@@ -1046,7 +1046,8 @@ table#table-comparison .btn.buy-now  {
     text-transform: capitalize;
 }
 .infocusTable td[data-label='Price US'] { min-width: 128px; }
-table#table-comparison td:first-child {  text-align: right; }
+.tabs table#table-comparison td:first-child {  text-align: right; }
+.cmsedit table#table-comparison td:first-child {  text-align: center; }
 
 
 
